css/style.css
*{
    box-sizing: border-box;
    font-family: sans-serif;
}
body{
    background-color: #343a40;
    margin: auto;
    position: relative;
}
.section-title{
    font-size: 1.5rem;
    color: white;
}
.main-container{
    margin:1%;
}
.flex{
    display: flex;
}
.view-container{
    height: 35vh
}
.view{
    flex-wrap: nowrap;
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: -ms-autohiding-scrollbar;
    margin-bottom: 20px;
    scroll-behavior: smooth;
    position: relative;
    align-items: center;
    height: 100%;
}

.center{
    justify-content: center;
    align-items: center;
}
.related-container > div > img{
    height: 150px;
}
.poster{
    height: 100%
}
.cards{
    margin: 10px
}
ul{
    list-style: none;
    padding: 10px;
}
li {
    margin: 5px;
    color: white;
    transition: all .3s ease-in-out;
    text-align: center;
}
li:hover{
    cursor: pointer;
    color: rgb(61, 54, 54);
    transform: scale(1.05);
}

.nav-div{
    position: relative;
    text-align: center;
}

.nav-ul{
    position: absolute;
    z-index: 3;
    top: 1rem;
    right:25%;
    text-align: center;
    background-color: black;
    flex-direction: column;
    border-radius: 5px;
}

i{
    margin: 10px;
}

i:hover{
    cursor: pointer;
}

.no-display{
    display: none
}

.search{
    width: 50%;
    height: 2rem;
    border-radius: 10px;
    box-shadow: none;
    color: black;
    border: 1px solid transparent;
    outline: none;
    font-size: 1rem;
    transition: 0.4s ease-in-out;
}

.cards{
    transition: 0.4s ease-in-out;
}
.cards:hover{
    transform:scale(1.1);
    cursor: pointer;
}
 .modal{
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    flex-direction: column;
    background:linear-gradient(rgba(5, 1, 1, 0.829), rgba(19, 15, 15, 0.815), rgba(5, 1, 1, 0.815)) ;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}
.modal-inner-container{
    height: 100%;
}
.modal-inner{
    display:flex;
    justify-content: center;
    align-items: center;
    width: 50%;
    height: 100%;
    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(24, 20, 20, 0.9), rgba(0, 0, 0, 0.9));
    flex-direction: column;
    border-radius: 10px;
    padding-bottom: 20px;

}
.movie-info{
    width: 80%;
    display:flex;
    justify-content: space-between;
    color: white;
    font-size: .8rem;
}
.movie-overview{
    height:6rem;
    overflow-x: hidden;
}
h3{
    margin-top: 0;
    margin-bottom: .5rem;
    color: white;
    margin-top: 20px;
}
.movie-info > div{
    width: 45%;
    margin-bottom: 10px;
    display: inline-block;
}

.trailer-player{
    width: 80%;
    margin-bottom: 10px;
    margin-top: 30px;
}
.hidden{
    visibility: hidden;
}
.ratings{
    text-align: center;
}
.button-container{
    text-align: right;
    width: 80%;
    margin-top: 20px;
}
.modal-exit:hover{
    cursor: pointer;
}
.modal-exit{
    color: white;
    background-color: transparent;
    border-radius: 50% ;
    border: none;
}
.modal-similar{
    background-color: #030507;
    width: 100%;
    border-radius: 10px;
}

button.scroll{
    color:white;
    text-decoration: none;
    font-size: 4em;
    width: 5%;
    padding: 20px;
    text-align: center;
    z-index: 1;
    height: 100%;
    margin: 10px;
    border: 0;
    background:linear-gradient( #343a4070, rgba(95, 93, 93, 0.342),#343a4085);
}
button.scroll:active{
    transform: scale(1.05);
}
button.scroll:hover{
    cursor: pointer;
}

.modal .scroll{
    background:linear-gradient(rgba(0, 0, 0, 0.034), rgba(19, 15, 15, 0.411), rgba(44, 36, 36, 0.747),rgba(19, 15, 15, 0.411), rgba(0, 0, 0, 0.034)
    );
}

button:focus{
    border:0;
    outline: none;
    box-shadow: none;
}




/* Scrollbar style */
::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgb(82, 80, 80);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(32, 31, 31);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(24, 23, 23);
}


@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 1024px)
  and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) {
    .cards{
        height: 25vh;
    }
    .poster{
        height: 100%;
    }

    .modal-inner{
        display:flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        height: 100%;
        background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(24, 20, 20, 0.9), rgba(0, 0, 0, 0.9));
        flex-direction: column;
        border-radius: 10px;
        padding-bottom: 20px;
    }
}

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 1024px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {
      .cards{
        height: 100%;
    }
    .poster{
        height: 100%;
    }
    .modal-inner-container{
        height: 100%;
    }
    .movie-info{
        display: none;
    }
    .modal-inner > div > h3{
        font-size: 10px;
    }
    .modal{
        top: 1px
    }
    .modal-similar{
        height: 35vh;
    }

}

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 800px){

    button.scroll{
        display: none;
    }

}

